--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,4 +1,4 @@
-<h1> form for making a new user </h1>
+<h1> Please Create an Account </h1>
 <form class='new-user-form' action="/users" method="POST">
   Username:<input type="text" name="user[username]" placeholder="username"><br>
   E-mail:<input type="email" name="user[email]" placeholder="email"><br>
