--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,2 +1,13 @@
-<h1>users page</h1>
+<h1><%= @user.username.capitalize %>'s page</h1>
 <h2><%= @user.username %></h2>
+
+<div>Request a Cake!</div>
+<div>you need to make a request model first</div>
+
+
+
+<div>No longer wish to be a member?</div>
+<form action="/users/<%= @user.id%>" method="POST" >
+  <input type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete your account">
+</form>
