--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,8 +1,10 @@
 <h1><%= @user.username.capitalize %>'s page</h1>
 <h2><%= @user.username %></h2>
 
-<div>Request a Cake!</div>
-<div>you need to make a request model first</div>
+
+<%= erb :'/requests/_cake_request_form' %>
+
+<!-- put request form partial here -->
 
 
 
