--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,10 +1,9 @@
 <h1><%= @user.username.capitalize %>'s page</h1>
-<h2><%= @user.username %></h2>
 
 
-<%= erb :'/requests/_cake_request_form' %>
 
-<!-- put request form partial here -->
+<%= erb :"requests/_cake_request_form" %>
+
 
 
 
