--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,3 +1,18 @@
-body {
-  padding: 15px;
+body,h1,h2,h3,h4,h5,h6,html, a {font-family: "Lato", sans-serif;}
+body, html {
+    height: 100%;
+    color: #777;
+    line-height: 1.8;
+    padding: 15px;
 }
+
+.button {
+  background-color: white;
+  color: blue;
+  border: 2px solid;
+  border-radius: 8px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0,2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  width:100%;
+
+}
+
