make the pintrest api workgit add -A

--- a/app/views/cakerequests/_cake_request_form.erb
+++ b/app/views/cakerequests/_cake_request_form.erb
@@ -6,7 +6,8 @@
   <br>
   <input type="datetime-local" name="cakerequest[delivery_date]">
   <br>
-  <input type="text" name="cakerequest[choosen_img_url]">
+  <input type="text" name="cakerequest[choosen_img_url]" placeholder="drop us a url from pintrest!">
   <input type="submit" value="Request a cake!">
 </form>
+
 
