--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,6 +14,11 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="/js/application.js"></script>
+  <script
+    type="text/javascript"
+    async defer
+    src="//assets.pinterest.com/js/pinit.js"
+></script>
 
   <title> Beach Dog Bakery </title>
 
