finalize cake request form

--- a/app/views/cakerequests/_cake_request_form.erb
+++ b/app/views/cakerequests/_cake_request_form.erb
@@ -6,7 +6,7 @@
   <br>
   <input type="datetime-local" name="cakerequest[delivery_date]">
   <br>
-  <input type="text" name="cakerequest[choosen_img_url]" placeholder="drop us a url from pintrest!">
+  <input type="text" name="cakerequest[choosen_img_url]" placeholder="click a pin, drop the url here!">
   <input type="submit" value="Request a cake!">
 </form>
 
