--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -4,14 +4,15 @@
 
 
 <h2>Looking for some "Pin-spiration?"</h2>
-
- <% @board.data.each do |pin| %>
+ <div id='pins'>
+  <% @board.data.each do |pin| %>
     <a href="https://www.pinterest.com/pin/<%=pin.id%>/"
     data-pin-do="embedPin">
     </a>
- <% end %>
+  <% end %>
+ </div>
 
-
+<br>
 <div>No longer wish to be a member?</div>
 <form action="/users/<%= @user.id%>" method="POST" >
   <input type="hidden" name="_method" value="delete">
