--- a/public/css/application.css
+++ b/public/css/application.css
@@ -3,16 +3,16 @@ body, html {
     height: 100%;
     color: #777;
     line-height: 1.8;
-    padding: 15px;
+    padding: 20px;
 }
 
-.button {
-  background-color: white;
-  color: blue;
-  border: 2px solid;
-  border-radius: 8px;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0,2), 0 6px 20px 0 rgba(0,0,0,0.19);
-  width:100%;
-
+#pins {
+display: flex;
+align-items: flex-start;
+justify-content: center;
+flex-wrap: wrap;
 }
 
+.request-view {
+
+}
